Creating Auth service.
