# app/api/v1/common/app-status.js
@@ -6,6 +6,9 @@ const statusCodes = {};
 
 statusCodes[exports.TEACHER_NOT_CREATED = 'APP-100'] = 'Teacher not created.';
 statusCodes[exports.DUPLICATE_TEACHER_USERNAME = 'APP-101'] = 'Teacher username already exists.';
+statusCodes[exports.TEACHER_NOT_FOUND = 'APP-102'] = 'Teacher not found.';
+statusCodes[exports.PASSWORD_NOT_VALID = 'APP-103'] = 'Password not valid.';
+statusCodes[exports.LOGIN_NOT_VALID = 'APP-104'] = 'Login not valid.';
 statusCodes[exports.INTERNAL_ERROR = 'APP-999'] = 'Internal error.';
 
 
